SodexoP/src/objects/API_SodexoAgil__mdt.object
<CustomObject>
    <description>Metadata para consumo de servicios API</description>
    <fields>
        <fullName>Username_Token__c</fullName>
        <label>Username_Token</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>password_token__c</fullName>
        <label>Password Token</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tipo_client_registrar__c</fullName>
        <label>Tipo Client Registrar</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>POST</fullName>
                    <default>true</default>
                    <label>POST</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tipo_product_lista__c</fullName>
        <label>Tipo Product Lista</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GET</fullName>
                    <default>true</default>
                    <label>GET</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tipo_token__c</fullName>
        <label>Tipo Token</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>POST</fullName>
                    <default>true</default>
                    <label>POST</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>url_client_registrar__c</fullName>
        <label>Url Client Registrar</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>url_product_lista__c</fullName>
        <label>Url Product Lista</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>url_token__c</fullName>
        <label>Url Token</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>API_SodexoAgil</label>
    <pluralLabel>API_SodexoAgil</pluralLabel>
</CustomObject>